--- a/Client/public/i18n/ar.json
+++ b/Client/public/i18n/ar.json
@@ -65,7 +65,7 @@
     "Services":"الخدمات",
     "Contact Us":"اتصل بنا",
     "Connecting customers with trusted service providers across Egypt.": "توصيل العملاء إلى مقدمي الخدمات الموثقين في جميع أنحاء مصر.",
-    "© 2025 Salahly. All rights reserved.": "جميع الحقوق محفوظة © 2025 صلح لي.",
+    " 2025 Salahly. All rights reserved.": "جميع الحقوق محفوظة 2025 صلح لي.",
     "Cairo, Egypt":"القاهرة, مصر",
     "Electrician":"الكهرباء",
     "Plumber":"سباك",
@@ -684,6 +684,18 @@
       "SubmitSuccess": "تم إرسال طلب الخدمة بنجاح. سيتم تحويلك خلال لحظات.",
       "GenericError": "حدث خطأ. حاول مرة أخرى.",
       "ActionError": "تعذر تنفيذ العملية حالياً. حاول مجدداً لاحقاً."
+    }
+  },
+  "TechnicianProfilePage": {
+    "Portfolio": {
+      "Title": "معرض الأعمال",
+      "Hint": "اضغط على المشروع لاستعراض التفاصيل",
+      "Empty": "لا توجد عناصر في معرض الأعمال حتى الآن."
+    },
+    "Reviews": {
+      "Title": "المراجعات",
+      "Description": "آراء العملاء حول هذا الفني.",
+      "Empty": "لا توجد مراجعات حتى الآن."
     }
   }
 }
