--- a/Client/public/i18n/en.json
+++ b/Client/public/i18n/en.json
@@ -698,5 +698,10 @@
       "Description": "What customers are saying about this technician.",
       "Empty": "No reviews yet."
     }
+  },
+  "AdminNavBar":{
+    "Dashboard": "Dashboard",
+    "Craft": "Craft",
+    "Approve Craftsman":"Approve Craftsman"
   }
 }
