--- a/Client/public/i18n/ar.json
+++ b/Client/public/i18n/ar.json
@@ -633,6 +633,10 @@
       "DescriptionCounter": "{{used}}/{{max}} حرف",
       "AreaLabel": "منطقة الخدمة *",
       "AreaPlaceholder": "اختر المنطقة",
+      "AvailableFromLabel": "متاح من تاريخ *",
+      "AvailableFromHint": "أول يوم متاح لديك",
+      "AvailableToLabel": "متاح حتى تاريخ *",
+      "AvailableToHint": "آخر يوم متاح لديك",
       "DateLabel": "التاريخ المفضل *",
       "TimeLabel": "الفترة الزمنية المفضلة",
       "TimePlaceholder": "موعد مرن",
@@ -657,6 +661,8 @@
       "TitleInvalid": "يجب أن يكون العنوان بين 6 و80 حرفاً.",
       "DescriptionInvalid": "برجاء وصف المشكلة بما لا يقل عن 20 حرفاً.",
       "AreaRequired": "اختر المنطقة التي سيذهب إليها الفني.",
+      "AvailableFromRequired": "تاريخ البداية مطلوب.",
+      "AvailableToRequired": "تاريخ النهاية مطلوب.",
       "DateRequired": "حدد التاريخ الذي تفضله للزيارة.",
       "AddressRequired": "العنوان مطلوب."
     },
