Fix offers error + update the forms of serviceRequest
change the servuceRequest from customer side so they choose range of dates for their request
change the offerRequest so the technician can choose preferred date and time
Fix the errors that appears when there is no offers on a serviceRequest

--- a/Client/public/i18n/ar.json
+++ b/Client/public/i18n/ar.json
@@ -319,8 +319,8 @@
         "DurationLabel": "المدة (دقائق)",
         "DurationPlaceholder": "مثال: 90",
         "DurationError": "الحد الأدنى 15 دقيقة.",
-        "AvailableFromLabel": "متاح من",
-        "AvailableToLabel": "متاح إلى",
+        "PreferredDateLabel": "اليوم المقنرح",
+        "TimeSlotLabel": "الوقت المقترح",
         "Required": "مطلوب.",
         "DetailsLabel": "تفاصيل العرض",
         "DetailsPlaceholder": "اشرح طريقتك والمواد والتوافر وما إلى ذلك",
