--- a/Client/public/i18n/en.json
+++ b/Client/public/i18n/en.json
@@ -320,8 +320,8 @@
         "DurationLabel": "Duration (minutes)",
         "DurationPlaceholder": "e.g. 90",
         "DurationError": "Minimum 15 minutes.",
-        "AvailableFromLabel": "Available from",
-        "AvailableToLabel": "Available to",
+        "PreferredDateLabel": "Preferred date",
+        "TimeSlotLabel": "Time Slot",
         "Required": "Required.",
         "DetailsLabel": "Offer details",
         "DetailsPlaceholder": "Describe your approach, materials, availability, etc.",
@@ -548,7 +548,7 @@
       "Title": "Offers received",
       "Count": "{{count}} offers",
       "Estimated": "Estimated {{minutes}} min",
-      "Availability": "Available {{from}} → {{to}}",
+      "Availability": "Available {{Day}} → {{Time}}",
       "Sent": "Sent {{value}}",
       "Status": {
         "Pending": "Pending",
